--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,9 +21,9 @@ android {
 
 dependencies {
   compile fileTree(include: ['*.jar'], dir: 'libs')
-  compile 'com.facebook.react:react-native:+'
+  compile 'host.exp.exponent:react-native:+'
   compile 'com.android.support:appcompat-v7:25.0.1'
-  compile 'com.google.android.gms:play-services-wallet:10.+'
+  compile 'com.google.android.gms:play-services-wallet:9.8.0'
   compile 'com.stripe:stripe-android:2.1.+'
   compile 'com.github.thefuntasty:CreditCardEntry:1.4.8.4'
 }
